--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.2.3",
     "@angular/router": "^18.2.3",
     "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
     "ngx-bootstrap": "^18.0.2",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
